--- a/style.css
+++ b/style.css
@@ -15,11 +15,6 @@ body {
   text-align: center;
   font-family: 'Roboto', sans-serif;
 }
-a[href="resume.html"] {
-  position: absolute;
-  top: 0px;
-  right: 10px;
-}
 h1 {
   font-size: 60px;
 }
@@ -78,4 +73,24 @@ a
 }
 .assignment-item {
   flex: 1 0 calc(33.33% - 20px);
+}
+#image{
+  width:20%;
+  height:20%;
+  border-radius:50%;
+  border-style:solid; 
+}
+
+
+.footer {
+  text-align: center;
+  margin-top: 20px;
+}
+.projects {
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
